--- a/01_Courses/web_bootcamp/YelpCamp/package.json
+++ b/01_Courses/web_bootcamp/YelpCamp/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "method-override": "^3.0.0",
     "mongoose": "^8.0.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "punycode": "^2.3.1"
   }
 }
