--- a/01_Courses/web_bootcamp/35_RESTful_Routes_CODE/package.json
+++ b/01_Courses/web_bootcamp/35_RESTful_Routes_CODE/package.json
@@ -1,22 +1,17 @@
 {
-  "name": "yelpcamp",
+  "name": "35---restful_routes_code",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.9",
-    "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
-    "joi": "^17.11.0",
     "method-override": "^3.0.0",
-    "mongoose": "^8.0.2",
-    "morgan": "^1.10.0",
-    "punycode": "^2.3.1"
+    "uuid": "^9.0.1"
   }
 }
